Moving the edit clientlibs to /static and fixing the z-index to display over top of bootstrap 4

--- a/ui/src/main/frontend/src/scss/styles.scss
+++ b/ui/src/main/frontend/src/scss/styles.scss
@@ -73,7 +73,7 @@ ul.Breadcrumb  {
 .Modal {
     display: none; 
     position: fixed; 
-    z-index: 1000; 
+    z-index: 1002; 
     left: 0;
     top: 0;
     width: 100%; 
